src/main/java/org/example/lexer/error/IdentifierTooLongException.java
package org.example.lexer.error;

public class IdentifierTooLongException extends Exception {
    public IdentifierTooLongException(String msg) {super(msg);}
}
